fixed css structure and overflow

--- a/processvisualizer/src/css/navBar.css
+++ b/processvisualizer/src/css/navBar.css
@@ -1,4 +1,5 @@
 .customNavBar {
+    width: 100vw;
     border: 1px solid #000;
     padding: 10px;
 }
