--- a/processvisualizer/src/css/processmap.css
+++ b/processvisualizer/src/css/processmap.css
@@ -5,6 +5,7 @@
   grid-column-gap: 0px;
   grid-row-gap: 0px;
   height: 100vh;
+  overflow: hidden;
   }
   .views { 
     grid-area: 2 / 1 / 3 / 6; 
@@ -12,13 +13,34 @@
   }
   .processes { 
     grid-area: 3 / 1 / 6 / 2; 
-    background-color: green;
   }
   .meta {
      grid-area: 3 / 5 / 6 / 6; 
-     background-color: blue;
     }
   .processmap {
      grid-area: 3 / 2 / 6 / 5; 
-     background-color: blueviolet;
     }
+
+
+.parentInside{
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  height: 100vh;
+  }
+      
+.div1 {
+   grid-area: 1 / 1 / 6 / 2;
+   background-color: yellow;
+}
+.div2 { 
+  grid-area: 1 / 5 / 6 / 6;
+  background-color: black;
+ }
+.div3 { 
+  grid-area: 1 / 2 / 6 / 5;
+  background-color: gray;
+  overflow: hidden;
+ }    
